// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<p
  className="sc-AxjAm hmEnYx sinoui-typography sinoui-typography--body2"
  color="textPrimary"
  type="body2"
>
  Body2
</p>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-AxjAm hmEnYx sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </h2>,
  <p
    className="sc-AxjAm kGGcFZ sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm iSfNrw sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm iIaOmZ sinoui-typography sinoui-typography--body2"
    color="success"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm hmEnYx sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <p
    className="sc-AxjAm hmEnYx sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm iFWQyW sinoui-typography sinoui-typography--body2"
    color="primary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm eSSXbd sinoui-typography sinoui-typography--body2"
    color="secondary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm hmEnYx sinoui-typography sinoui-typography--body2"
    color="textPrimary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm fgkYSM sinoui-typography sinoui-typography--body2"
    color="textSecondary"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm fAjjbc sinoui-typography sinoui-typography--body2"
    color="error"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm cWvbUV sinoui-typography sinoui-typography--body2"
    color="warning"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm iIaOmZ sinoui-typography sinoui-typography--body2"
    color="success"
    type="body2"
  >
    Body2
  </p>,
  <p
    className="sc-AxjAm cPGedZ sinoui-typography sinoui-typography--body2"
    color="info"
    type="body2"
  >
    Body2
  </p>,
]
`;
